# flappy-fish

./: Cargo.toml  index.html
src/: cfg.rs  main.rs  structs.rs  sys.rs
src/game/: cfg.rs  mod.rs  structs.rs  sys.rs
