[package]
name = "flappy-fish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier2d = "0.23.0"

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
	"dynamic_linking",
	"multi-threaded",
	"bevy_asset",
	"bevy_audio",
	"bevy_winit",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"default_font",

	"png",
	"vorbis",
	"serialize",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
