[package]
name = "flappy-fish"
authors = ["cxrvus"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier2d = "0.27.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
	"dynamic_linking",
	"bevy_asset",
	"bevy_audio",
	"bevy_winit",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_state",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"default_font",

	"png",
	"vorbis",
	"serialize",
]

[dependencies.winit]
# version = "*"
version = "=0.30.5"
features = ["default"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
